--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,9 +1,14 @@
+server:
+  port: 8080
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:file:C:/Users/Thanh Hung/test;AUTO_SERVER=TRUE
     driverClassName: org.h2.Driver
     username: sa
     password: ''
+  sql:
+    init:
+      mode: always
   h2:
     console:
       enabled: true
@@ -12,8 +17,3 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-  application:
-    name: demo
-
-server:
-  port: 8080
