--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -4,7 +4,7 @@ main:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://toanphat124:0984029574Phat%21@cluster0.jmrvw.mongodb.net/BookStore
+      uri: mongodb+srv://tlcn_user:bookwebsite@cluster0.jmrvw.mongodb.net/BookStore
 
   mail:
     host: smtp.gmail.com
