--- a/books/src/main/resources/application.yml
+++ b/books/src/main/resources/application.yml
@@ -4,6 +4,6 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://toanphat124:0984029574Phat%21@cluster0.jmrvw.mongodb.net/BookStore
+      uri: mongodb+srv://tlcn_user:bookwebsite@cluster0.jmrvw.mongodb.net/BookStore
   main:
     allow-bean-definition-overriding: true
