--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.0</version>  <!-- Or latest 2.8.x; check Maven Central for updates -->
+		</dependency>
 	</dependencies>
 
 	<build>
