--- a/books/pom.xml
+++ b/books/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
