--- a/orders/pom.xml
+++ b/orders/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.0</version>  <!-- Or latest 2.8.x; check Maven Central for updates -->
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
