--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ accounts/src/main/resources/application.yml
 books/src/main/resources/application.yml
 
 orders/src/main/resources/application.yml
+
+chatbot/src/main/resources/application.yml
